; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/cris/arch-v32/drivers/extr_cryptocop.c_get_session.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/cris/arch-v32/drivers/extr_cryptocop.c_get_session.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cryptocop_session = type { i64, %struct.cryptocop_session* }

@cryptocop_sessions_lock = common dso_local global i32 0, align 4
@cryptocop_sessions = common dso_local global %struct.cryptocop_session* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cryptocop_session* (i64)* @get_session to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cryptocop_session* @get_session(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.cryptocop_session*, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i64, i64* %4, align 8
  %6 = call i32 @spin_lock_irqsave(i32* @cryptocop_sessions_lock, i64 %5)
  %7 = load %struct.cryptocop_session*, %struct.cryptocop_session** @cryptocop_sessions, align 8
  store %struct.cryptocop_session* %7, %struct.cryptocop_session** %3, align 8
  br label %8

8:                                                ; preds = %19, %1
  %9 = load %struct.cryptocop_session*, %struct.cryptocop_session** %3, align 8
  %10 = icmp ne %struct.cryptocop_session* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %8
  %12 = load %struct.cryptocop_session*, %struct.cryptocop_session** %3, align 8
  %13 = getelementptr inbounds %struct.cryptocop_session, %struct.cryptocop_session* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* %2, align 8
  %16 = icmp ne i64 %14, %15
  br label %17

17:                                               ; preds = %11, %8
  %18 = phi i1 [ false, %8 ], [ %16, %11 ]
  br i1 %18, label %19, label %23

19:                                               ; preds = %17
  %20 = load %struct.cryptocop_session*, %struct.cryptocop_session** %3, align 8
  %21 = getelementptr inbounds %struct.cryptocop_session, %struct.cryptocop_session* %20, i32 0, i32 1
  %22 = load %struct.cryptocop_session*, %struct.cryptocop_session** %21, align 8
  store %struct.cryptocop_session* %22, %struct.cryptocop_session** %3, align 8
  br label %8

23:                                               ; preds = %17
  %24 = load i64, i64* %4, align 8
  %25 = call i32 @spin_unlock_irqrestore(i32* @cryptocop_sessions_lock, i64 %24)
  %26 = load %struct.cryptocop_session*, %struct.cryptocop_session** %3, align 8
  ret %struct.cryptocop_session* %26
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
